BK added, layout changed, text pos, and more

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,6 +3,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <meta property="og:title" content="mosa-kasem" />
+  <meta property="og:type" content="SocialMedia" />
+  <meta property="og:url" content="http://localhost:4000/" />
+  <meta property="og:image" content="https://ca.slack-edge.com/T0347K4GQ-U6UD4851N-b11dddd640d0-1024" />
+  <meta name="twitter:card" content="my_pic_large" />
+  <meta property="sl:app_id" content="U6UD4851N" />
+
   <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
   <meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
 
