--- a/_Sass/minima.scss
+++ b/_Sass/minima.scss
@@ -33,13 +33,20 @@ $on-laptop:        800px !default;
 // }
 
 //my code
-@mixin for-large-text {
-  font: {
-    font-family: Arial;
-    size: 180;
-    font-weight: bold;
+
+@mixin background($imgpath,$position:0 0,$repeat: no-repeat) {
+  background: {
+      image: url($imgpath);
+      position: $position;
+      repeat: $repeat;
   }
 }
+.page-content {
+  @include background("./img/background.jpg")
+}
+$flashy-image: url("./img/side.jpg");
+$transparent-backgruound: rgba(255, 255, 255, 0.493);
+$size-border-all: 5px solid black;
 $size-xsmall: 2px;
 $translucent-white: rgba(255, 255, 255, 0.205);
 $translucent-white1: rgba(27, 51, 0, 0.205);
@@ -47,37 +54,91 @@ $colorForText: #c2c2c2;
 $border-style: 1px solid rgba(0, 126, 112, 0.401);
 $my-font-stack: Helvetica, sans-serif;
 p {
+  text-align: left;
+}
+.home {
+  padding: 20px;
+  background-color: $transparent-backgruound;
+  border-radius: 25px;
+  border: white;
+  border-width: 2px;
+  border-style: solid;
+  background-image: $flashy-image;
+  background-position: right;
+}
+@mixin for-large-text {
+  font: {
+    font-family: Arial;
+    size: 1820px;
+    font-weight: bold;
+  }
+}
+a:hover {
+  border-left-width:5px;
+  font-family:arial;
+  font-weight:bold;
+}
+.post-list nav, ul, li {
+  display: block;
+}
+.post {
+  background-color: $transparent-backgruound;
+  border-radius: 25px;
+  border: white;
+  border-width: 2px;
+  border-style: solid;
+  padding: 20px;
+  margin: 20px;
+  text-align: center;
+}
+.post-list {
+  background-color: $transparent-backgruound;
+  border-radius: 25px;
+  border: white;
+  border-width: 2px;
+  border-style: solid;
+  padding: 20px;
+  margin: 20px;
+  text-align: center;
+  margin-left: 0 auto;
+  margin-right: 0 auto;
+}
+p {
   color: #191919cc;
 }
 h3 {
   text-align: center;
   margin-left: 0 auto;
   margin-right: 0 auto;
-  background-color: $translucent-white;
   font-family: $my-font-stack;
   color: rgba(0, 3, 41, 0.87);
+}
+.home h1 {
+  text-align: center;
+  margin-left: 0 auto;
+  margin-right: 0 auto;
+  font-family: $my-font-stack;
+  color: white;
 }
 h1 {
   text-align: center;
   margin-left: 0 auto;
   margin-right: 0 auto;
-  background-color: $translucent-white;
   font-family: $my-font-stack;
-  color: rgba(0, 110, 92, 0.507);
 }
 .banner {
   font-family: 'Pacifico', cursive;
   height: 400px;
   text-align: center;
   border : {
-    top: 4px solid black;
-    bottom: 4px solid black;
+    top: $size-border-all;
+    bottom: $size-border-all;
 	}
   
   .slogan {
     background-color: $translucent-white;
   	position: absolute;
-  	border: 4px solid black;
+  	border: $size-border-all;
   	top: 200px;
   	left: 25%;
   	width: 50%;
