--- a/_Sass/minima/_layout.scss
+++ b/_Sass/minima/_layout.scss
@@ -17,11 +17,6 @@
   letter-spacing: -1px;
   margin-bottom: 0;
   float: left;
-
-  &,
-  &:visited {
-    color: $grey-color-dark;
-  }
 }
 
 .site-nav {
@@ -37,7 +32,6 @@
   }
 
   .page-link {
-    color: $text-color;
     line-height: $base-line-height;
 
     // Gaps between nav items, but not on the last one
@@ -108,6 +102,7 @@
 .site-footer {
   border-top: 3px solid $grey-color-light;
   padding: $spacing-unit 0;
+  color: white;
 }
 
 .footer-heading {
@@ -184,7 +179,6 @@
 }
 
 .post-list {
-  margin-left: 0;
   list-style: none;
 
   > li {
